--- a/action_page.html
+++ b/action_page.html
@@ -33,7 +33,8 @@
                         <li> Go Buy </li>
                         <li> LogOut </li>
                     </ul>
-    </div>
+            </div>
+        </div>    
 
     <script>
             function myFunction(x) {
@@ -41,7 +42,7 @@
             }
     </script>
     </div>
-    <button type="button" class="ax-header-action-button">My actions</button>
+    <a href='my_action.html' class="ax-header-action-button">My auctions</a>
 </header>
 
 <main class="ax-container">
@@ -55,8 +56,8 @@
         <div style="display: flex; align-items: center;">
             <p class="ax-action-current-price">Current price: <span>2$</span></p>
             <form>
-                <input type="number" placeholder="Liciteaza">
-                <button type="submit"> +</button>
+                <input type="number" placeholder="Liciteaza" class="ceva">
+
             </form>
         </div>
         <p class="ax-action-time-left"> 1 day left </p>
