--- a/add_action.html
+++ b/add_action.html
@@ -41,7 +41,8 @@
             }
     </script>
     </div>
-    <button type="button" class="ax-header-action-button">My actions</button>
+    <a href='my_action.html' class="ax-header-action-button ax-header-action-button--left">My auctions</a>
+    <a href='login.html' class="ax-header-logout-button">LogOut</a>
 </header>
 
 <main class="ax-container">
