--- a/home.html
+++ b/home.html
@@ -24,7 +24,6 @@
                      <button type="submit" class="ax-header-formcon-search-button">Search</button>
                 </form>
                 <a href="my_action.html" class="ax-header-action-button ">My Auctions</a>
-                <a href="#" class="ax-header-action-button a">My sales</button></a>
                 <a href="#" class="ax-header-action-button">Logout</a>
             </div>
     </div>    
@@ -37,10 +36,10 @@
     </div>
         <div class="ax-header-right">
             <div class="ax-header-button-group">
-                <button type="button" class="ax-header-action-button ax-header-action-button--left">My auctions</button>
+                <a href="my_action.html"class="ax-header-action-button ax-header-action-button--left">My auctions</a>
                 <button type="button" class="ax-header-action-button ax-header-action-button--right">My sales</button>
             </div>
-            <button type="button" class="ax-header-action-button">logout</button>
+            <button type="button" class="ax-header-action-button chestie-logout">logout</button>
         </div>
         
 
