--- a/my_action.html
+++ b/my_action.html
@@ -22,7 +22,7 @@
             <input type="text" placeholder=" " class="ax-header-form-input">
             <button type="submit" class="ax-header-form-search-button">Search</button>
         </form>
-        <div class=" container" class="container__content" onclick="myFunction(this)">
+        <div class=" container container__content" onclick="myFunction(this)">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
@@ -42,10 +42,10 @@
         </script>
     </div>
         <div class="ax-header-button-group">
-            <button type="button" class="ax-header-action-button ax-header-action-button--left">ADD Auction</button>
-            <button type="button" class="ax-header-action-button ax-header-action-button--right">Go Buy</button>
+           <a href="add_action.html" class="ax-header-action-button ax-header-action-button--left">ADD Auction</a>
         </div>
-        <button type="button" class="ax-header-logout-button">Logout</button>
+        <button type="button" class="ax-header-logout-button">LogOut</button>
+        </div>
 </header>
 
 <main class="ax-container">
@@ -56,6 +56,7 @@
         </header>
         <p class="ax-card-normal-current-price">Current price: <span>2$</span></p>
         <p class="ax-card-normal-time-left"> 1 day left </p>
+        <a href='action_page.html'>Vezi detalii</a>
     </div>
 
     <div class="ax-card ax-card-normal">
